--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary-color:#66FCF1;
+  --secondary-color: #45A29F;
+  --third-color:#C5C6C8; 
+  --darkest-color: #202833;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background: lightgray;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: gray;
+}
+
+html {
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+body {
+  color: var(--secondary-color);
+  background-color:var(--darkest-color);
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+body div{
+  position: relative;
+}
+@media (max-width:1281px){
+  html{
+    font-size: 15px;
+  }
+}
+@media (max-width:1024px){
+  html{
+    font-size: 14px;
+  }
+}
+@media(max-width: 767px){
+  html{
+    font-size: 12px;
+  }
 }
